force-app/main/default/objects/Home_Office_Product_Preferences__mdt/Home_Office_Product_Preferences__mdt.object-meta.xml
<CustomObject>
    <label>Home Office Product Preference Option</label>
    <pluralLabel>Home Office Product Preference Options</pluralLabel>
</CustomObject>