force-app/main/default/objects/Home_Office_Product_Preferences__mdt/fields/Customer_Option__c.field-meta.xml
<CustomField>
    <fullName>Customer_Option__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if this is a product option customer can select</description>
    <label>Customer Option</label>
    <type>Checkbox</type>
</CustomField>