force-app/main/default/objects/Home_Office_Product_Preferences__mdt/fields/DIGGING_NEEDED__c.field-meta.xml
<CustomField>
    <fullName>DIGGING_NEEDED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DIGGING_NEEDED</label>
    <type>Checkbox</type>
</CustomField>