force-app/main/default/objects/Home_Office_Product_Preferences__mdt/fields/OTC_Codes__c.field-meta.xml
<CustomField>
    <fullName>OTC_Codes__c</fullName>
    <label>OTC Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>