force-app/main/default/objects/Home_Office_Product_Preferences__mdt/fields/Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Product_Codes__c</fullName>
    <description>List of product codes for this specific product option</description>
    <label>Product Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>