force-app/main/default/objects/Home_Office_Product_Preferences__mdt/fields/Product_Da_Translation__c.field-meta.xml
<CustomField>
    <fullName>Product_Da_Translation__c</fullName>
    <description>For Danish Translation</description>
    <label>Product Da Translation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>