force-app/main/default/objects/Home_Office_Product_Preferences__mdt/fields/Product_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Product_Sequence__c</fullName>
    <description>Field is used for sorting i default sequence and as an internal code, instead of using name</description>
    <label>Product Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>