force-app/main/default/objects/Home_Office_Product_Preferences__mdt/fields/VAS_Codes__c.field-meta.xml
<CustomField>
    <fullName>VAS_Codes__c</fullName>
    <label>VAS Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>