force-app/main/default/objects/Home_Office_Product_Preferences__mdt/listViews/All_Data.listView-meta.xml
<ListView>
    <fullName>All_Data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Product_Da_Translation__c</columns>
    <columns>Product_Sequence__c</columns>
    <columns>Customer_Option__c</columns>
    <columns>Product_Codes__c</columns>
    <columns>OTC_Codes__c</columns>
    <columns>VAS_Codes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Data</label>
    <language>en_US</language>
</ListView>